# PT-IT-Model-Differences

./: .gitignore  AGENTS.md  CIRCUIT_TRACER_ISSUE.md  CLAUDE.md  LICENSE  README.md  REPRODUCIBILITY.md  main.py  pyproject.toml  test_audit.py  tmp_rerun_e310.py
data/: eval_dataset_v2.jsonl  eval_dataset_v2_holdout_0600_1199.jsonl  exp3_dataset.jsonl  exp6_dataset.jsonl  exp6_dataset_v2.jsonl  gold_standard_v1.csv  mmlu_content_fact.jsonl
docs/: 0G_commitment_plots_plan.md  0G_tuned_lens_handoff.md  EVAL_REDESIGN_v1.md  EXP7_CODE_REVIEW.md  EXPERIMENT_REGISTRY.md  NEXT_STEPS_v11.md  PHASE0_HANDOFF.md  PHASE0_MULTIMODEL_STEERING_PLAN.md  README.md  TUNED_LENS_EVAL_PLAN.md  TWO_PHASE_EVAL_PATTERN.md  exp6-steering-design.md  model_ablation.md  poc-pipeline-notes.md  research-notes-v2.md
paper_draft/: EXP24_32B_EXTERNAL_VALIDITY_PLAN.md  EXP38_QWEN_OLMO_FINAL_LAYER_CROSSCODER_HARDENING_PLAN.md  EXP54_EXP22_SYMMETRIC_FIXED_HISTORY_AUDIT_PLAN.md  PAPER_DRAFT_v12.md  PAPER_DRAFT_v14.md  PAPER_DRAFT_v15.md  PAPER_DRAFT_v18.md  PAPER_DRAFT_v19.md  PAPER_DRAFT_v20.md  PAPER_DRAFT_v21.md  PAPER_DRAFT_v22.md  PAPER_DRAFT_v24.md  PAPER_DRAFT_v25.md
scripts/: README.md  analyze_exp13_full.py  analyze_exp13a_lite.py  analyze_exp15.py  build_eval_dataset_v2.py  build_exp6_dataset.py  classify_governance_features.py  completion_pipeline.sh  compute_cohens_kappa.py  compute_feature_diff_scores.py  compute_structural_enrichment.py  create_gold_standard.py  exp6_B5_pipeline.sh  exp6_completion_pipeline.sh  exp6_continuation_pipeline.sh  exp6_pipeline.sh  gcp_upload_and_cleanup.py  (+117 more)
(+1381 files in other folders)
