[project]
name = "structral-semantic-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "circuit-tracer",
    "einops>=0.8.2",
    "huggingface-hub>=0.36.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "transformers>=4.50.0",
    "tqdm>=4.67.3",
    "transformer-lens>=2.17.0",
    "pytest>=9.0.2",
    "scikit-dimension>=0.3.4",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "openai>=2.29.0",
]

[tool.uv.sources]
circuit-tracer = { git = "https://github.com/safety-research/circuit-tracer.git", rev = "26a976e" }

[dependency-groups]
dev = [
    "pyflakes>=3.4.0",
]
